<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="20dp"
        android:text="@string/lbl_rg_figures"/>
    <RadioGroup
        android:id="@+id/main_rg_figures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <RadioButton
            android:id="@+id/main_rb_square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_rb_square"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/main_rb_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_rb_rectangle"/>

        <RadioButton
            android:id="@+id/main_rb_triangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_rb_triangle"/>

        <RadioButton
            android:id="@+id/main_rb_circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_rb_circle"/>
    </RadioGroup>

    <Button
        android:id="@+id/main_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_next"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>
</LinearLayout>